k8s/istio/destination-rules/default-grafana.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: grafana
spec:
  host: grafana
  trafficPolicy:
    tls:
      mode: DISABLE
---
