k8s/istio/destination-rules/default-prometheus.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: prometheus
spec:
  host: prometheus-server
  trafficPolicy:
    tls:
      mode: DISABLE
---
